--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,43 +5,37 @@ pool:
   vmImage: ubuntu-latest
 
 stages:
-  - stage: Build
-    displayName: Build Stage
-    jobs:
-      - job: BuildApp
-        displayName: Build Frontend & Backend
-        steps:
+- stage: Build
+  displayName: Build Stage
+  jobs:
+  - job: BuildApp
+    displayName: Build Backend and Frontend
+    steps:
 
-          # ---------- BACKEND ----------
-          - task: UsePythonVersion@0
-            inputs:
-              versionSpec: '3.10'
-            displayName: 'Use Python 3.10'
+    # ---------------- BACKEND ----------------
+    - task: UsePythonVersion@0
+      inputs:
+        versionSpec: '3.10'
+      displayName: 'Use Python 3.10'
 
-          - script: |
-              cd backend
-              python -m pip install --upgrade pip
-              pip install -r requirements.txt
-            displayName: 'Install backend dependencies'
+    - script: |
+        cd backend
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+      displayName: 'Install backend dependencies'
 
-          - script: |
-              cd backend
-              python app.py &
-              sleep 5
-            displayName: 'Run Flask app (basic check)'
+    # ---------------- FRONTEND (VITE) ----------------
+    - task: NodeTool@0
+      inputs:
+        versionSpec: '20.x'
+      displayName: 'Use Node.js 20'
 
-          # ---------- FRONTEND ----------
-          - task: NodeTool@0
-            inputs:
-              versionSpec: '20.x'
-            displayName: 'Use Node.js 20'
+    - script: |
+        cd frontend
+        npm install
+      displayName: 'Install frontend dependencies'
 
-          - script: |
-              cd frontend
-              npm install
-            displayName: 'Install frontend dependencies'
-
-          - script: |
-              cd frontend
-              npm run build
-            displayName: 'Build React app'
+    - script: |
+        cd frontend
+        npm run build
+      displayName: 'Build Vite React app'
