--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,13 +1,3 @@
-asgiref==3.9.1
-blinker==1.9.0
-click==8.3.1
-Django==5.2.4
-django-cors-headers==4.7.0
-djangorestframework==3.16.0
 Flask==3.1.2
 flask-cors==6.0.2
-itsdangerous==2.2.0
-Jinja2==3.1.6
-MarkupSafe==3.0.3
-sqlparse==0.5.3
-Werkzeug==3.1.5
+gunicorn
